45
================

20/11/21 Truncate form name and shorten preview for online form emails
19/11/21 AdoptAPet want fees in dollars rather than cents
18/11/21 Cope with entering times in HH:MM:SS format as well as HH:MM
18/11/21 Fix use of excludefrombulkemail in online forms
18/11/21 Use utf-8 for locale file encodings (smaller)
17/11/21 Allow searching of log records #15
17/11/21 Add extra adoptapet fields for Weight/DOB/Fee #461
16/11/21 Make entering times more forgiving when just numbers entered
13/11/21 Fix exception emailing after webpy 0.62 upgrade
12/11/21 Add DocumentQRShare token for link to animalview #595
10/11/21 Revert to using generator functions directly for dumps #1062
04/11/21 Truncate email subject header to 78 chars for compatibility
03/11/21 Option to register any microchip with AKC Reunite
02/11/21 Check town/city when filtering waiting list by address
31/10/21 account ID->cost/payment type link wrong way around #293
29/10/21 Add new revXX token to repository reports and auto update #721
28/10/21 Add "Selective" option to good with/housetrained fields #803
28/10/21 Validate against empty usage dates when creating stock levels
28/10/21 Include email subject in log when sending from media tab
27/10/21 Stop using autoreload in production for performance reasons
27/10/21 Rename "Live Releases" to "Live Outcomes" for clarity
27/10/21 Drop html_adoptable_animals cache time to 10 minutes
26/10/21 Focus first field in report criteria, submit with return in input
26/10/21 Upgrade to web.py 0.62 and include with codebase
25/10/21 Bundle web.py due to different broken versions shipping with distros
23/10/21 Mark photos from online forms as exclude from publish by default
20/10/21 Record IP address with online form submissions
20/10/21 underweeks/overweeks parameters to service html_adoptable_animals
18/10/21 Blank Manufacturer/Batch when rescheduling vacc
17/10/21 Allow old HTML/FTP publisher to be disabled via sitedef #1040