@@ -6,8 +6,8 @@ import time
 # flake8: noqa - we have a lot of locales and this is convenient
 from asm3.locales import *
 
-VERSION = "45u [Sat 20 Nov 09:19:52 GMT 2021]"
-BUILD = "11200919"
+VERSION = "45u [Mon 22 Nov 13:47:20 GMT 2021]"
+BUILD = "11221347"
 
 DMY = ( "%d/%m/%Y", "%d/%m/%y" )
 HDMY = ( "%d-%m-%Y", "%d-%m-%y" )
